# Patron_Walkaway

./: .gitignore  FINDINGS.md  Makefile  PROJECT.md  README.md  STATUS.md  __unified_v2_test__no_canonical_cutoff.json  __unified_v2_test__no_canonical_mapping.parquet  check_span.py  explore.ipynb  fix_trainer.py  patch_backtester.py  patch_features.py  patch_trainer.py  patch_trainer2.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
analysis_outputs/: delay_distribution_monthly_core_metrics.csv  delay_distribution_monthly_tbet_tsession_tgame.csv  delay_monthly_t_bet.csv
baseline_models/: EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  __init__.py  __main__.py
credential/: .env.example  mlflow.env.example
data/: player_profile.schema_hash
doc/: AFG discussion.md  CLI_REVISION_PROPOSAL.md  DELAY_DISTRIBUTION_MONTHLY_ANALYSIS_20260428.md  FEATURE_SPEC_GUIDE.md  FINDINGS.md  GDP_schema_20260326.xlsx  PLAN_VS_TRAINER_COMPARISON.md  TRAINER_ISSUES.md  TRAINER_SUMMARY.md  TRAINER_TEAM_PRESENTATION.md  cursor_model_packaging_and_api_endpoint.md  discussion on feature grouping.md  drift_investigation_template.md  forecasting-robustness-comprehensive-guide.md  forecasting_robustness_literature_review.md  ktd_proposal_layered_data_assets.md  l0_ingest_governance_decisions.md  l0_layered_data_assets_convention.md  model_api_protocol.md  model_api_protocol_v2.md  phase2_alert_message_format.md  phase2_alert_runbook.md  phase2_drift_investigation_example.md  phase2_evidently_usage.md  phase2_ideas.md  phase2_model_rollback_runbook.md  phase2_p0_p1_implementation_plan.md  phase2_planning.md  phase2_provenance_query_runbook.md  phase2_provenance_schema.md  phase2_skew_check_runbook.md  plan_pipeline_diagnostics_and_mlflow_artifacts.md  player_profile_daily_spec.md  player_profile_spec.md  polars_pilot_expansion_governance.md  preprocessing_layered_data_assets_v1.md  task3_clickhouse_sql_analysis.md  task3_phase3_convergence_validation.md  time_semantics_registry_pr_checklist.md  track_human_lookback_vectorization_plan.md  (+6 more)
layered_data_assets/: RUNBOOK.md  __init__.py  l0_paths.py  (+18 more)
(+780 files in other folders)
