[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "walkaway_ml"
version = "0.0.1"
description = "Walkaway ML: scorer, validator, and ML API (no training)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn>=1.3.0",
    "joblib",
    "lightgbm",
    "pyyaml",
    "python-dotenv",
    "clickhouse-connect==0.13.0",
    "numba",
    "pyarrow",
]

# Optional: MLflow system metrics (MLFLOW_ENABLE_SYSTEM_METRICS_LOGGING) need psutil in-process.
# Pure API deploy images that do not train and do not enable system metrics can omit this extra.
[project.optional-dependencies]
mlflow-system-metrics = ["psutil"]

# Package mapping: install trainer/ as walkaway_ml (see setup.py)
